<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fadingEdge="none"
        android:padding="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:minWidth="90dp"
                    android:src="@raw/icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            style="@style/Widget.TextView.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/apptheme_main" />

                        <TextView
                            style="@style/Widget.TextView.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:text="v"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/text_gray_title" />

                        <TextView
                            style="@style/Widget.TextView.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_version"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/text_gray_title" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_app"
                        android:textColor="@color/text_gray_title" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_project_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/apptheme_main" />

                <TextView
                    android:id="@+id/about_desc_project"
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/about_project"
                    android:textColor="@color/text_gray_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_devs_project_lead_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/apptheme_main" />

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/about_devs_project_lead_mustafa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_devs_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/apptheme_main" />

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/about_devs_app_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/apptheme_main" />

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_devs_app_desc"
                    android:textColor="@color/text_gray_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="4dp" >

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/about_devs_app_sulejman" />

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/about_devs_app_sulejman_info"
                        android:textColor="@color/text_gray_title" />

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/about_devs_app_ihsan" />

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/about_devs_app_ihsan_info"
                        android:textColor="@color/text_gray_title" />
                </LinearLayout>

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/about_devs_web_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/apptheme_main" />

                <TextView
                    android:id="@+id/about_desc_web"
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_devs_web_desc"
                    android:textColor="@color/text_gray_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="4dp" >

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/about_devs_web_dzenis" />
                </LinearLayout>

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/about_devs_database_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/apptheme_main" />

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_devs_database_desc"
                    android:textColor="@color/text_gray_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="4dp" >

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/about_devs_database_lamija" />

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_devs_database_mersima" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_contact_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/apptheme_main" />

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_contact_desc"
                    android:textColor="@color/text_gray_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="4dp" >

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/about_devs_project_lead_mustafa" />

                    <TextView
                        android:id="@+id/about_contact_mustafa"
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/about_devs_project_lead_mustafa_contact"
                        android:textColor="@color/text_gray_title" />

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/about_devs_app_sulejman" />

                    <TextView
                        android:id="@+id/about_contact_sulejman"
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/about_devs_app_sulejman_contact"
                        android:textColor="@color/text_gray_title" />

                    <TextView
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/about_devs_app_ihsan" />

                    <TextView
                        android:id="@+id/about_contact_ihsan"
                        style="@style/Widget.TextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text="@string/about_devs_app_ihsan_contact"
                        android:textColor="@color/text_gray_title" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_open_source_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/apptheme_main" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/github" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingLeft="8dp" >

                        <TextView
                            android:id="@+id/TextView03"
                            style="@style/Widget.TextView.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:text="@string/about_open_source_desc"
                            android:textColor="@color/text_gray_title" />

                        <TextView
                            android:id="@+id/about_link_open_source"
                            style="@style/Widget.TextView.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:text="@string/about_open_source_github"
                            android:textColor="@color/text_gray_title"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card"
                android:orientation="vertical"
                android:padding="8dp" >

                <TextView
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_libraries_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/apptheme_main" />

                <TextView
                    android:id="@+id/about_link_libraries"
                    style="@style/Widget.TextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/about_libraries_desc"
                    android:textColor="@color/text_gray_title" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>